styled song wrapper on hover

--- a/client/src/pages/Songs/components/song.css
+++ b/client/src/pages/Songs/components/song.css
@@ -1,11 +1,16 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@500;700;800&display=swap");
-
-* {
-  font-family: "Inter";
-}
-
 .song {
   box-shadow: rgba(0, 0, 0, 0.103) 0px 3px 8px;
+  cursor: pointer !important;
+  transition: 0.2s ease-in-out;
+  &:hover{
+    transition: 0.2s ease-in-out;
+    transform: scale(.95);
+  }
+  &:hover .artwork img{
+    overflow: hidden;
+    transform: scale(1.1);
+    transition: 0.2s ease-in-out;
+  }
 }
 
 .song.true {
@@ -30,10 +35,10 @@
   background-color: rgba(163, 163, 163, 0.596);
 }
 
-.song-wrapper {
+.song-container {
   padding: 1rem;
   transition: 0.2s ease-in-out;
-  cursor: default;
+  /* cursor: default; */
 }
 
 .artwork {
@@ -55,75 +60,68 @@
   animation: opacity 2s alternate infinite;
 }
 
-.artwork img:hover {
-  transform: scale(1.1);
-  transition: 0.2s ease-in-out;
-}
-
-.song-container {
-  font-size: 1rem;
-}
-
 /*INFO*/
 
 .song-info {
   display: flex;
   flex-direction: column;
-  gap: 0.1rem;
-}
-
-.song-container p {
+  gap: 0.2rem;
   font-size: 0.85rem;
-  font-weight: 500;
-}
+  .song-name {
+    font-weight: 600;
+  }
+  .artist-name {
+    color: #8f8f8f;
+    font-weight: 400;
+  }
+  .song-genre {
+    margin-top: 1rem;
+    margin-right: 1rem;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    font-weight: 600;
+  }
+  .song-views {
+    font-weight: 500;
+    > span {
+      font-weight: 400;
 
-.artist-name {
-  font-weight: 500;
-  color: #a3a3a3;
-}
+      color: rgb(151, 151, 151);
+    }
+  }
+  .song-last-row {
+    margin-top: 1rem;
+    display: flex;
+    .song-upload-date {
+      padding: 0.2rem;
+      color: white;
+      background-color: rgb(61, 61, 61);
+      width: fit-content;
+      text-align: right;
+      align-self: right;
+      margin: 0 0 0 auto;
+    }
+    .song-status {
+      font-weight: 600;
+      display: flex;
+      align-items: center;
+      gap: 0.3rem;
+    }
+    .song-status.Deleted {
+      padding: 0.2rem;
+      font-size: 0.8rem;
+      color: white;
+      background-color: rgb(214, 0, 0);
+    }
 
-.song-genre {
-  margin-top: 1rem;
-  margin-right: 1rem;
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.song-last-row {
-  margin-top: 1rem;
-  display: flex;
-}
-
-.song-upload-date {
-  padding: 0.2rem;
-  color: white;
-  background-color: rgb(61, 61, 61);
-  width: fit-content;
-  text-align: right;
-  align-self: right;
-  margin: 0 0 0 auto;
-}
-
-.song-last-row .song-status {
-  font-weight: 600;
-  display: flex;
-  align-items: center;
-  gap: 0.3rem;
-}
-
-.song-status.Deleted {
-  padding: 0.2rem;
-  font-size: 0.8rem;
-  color: white;
-  background-color: rgb(214, 0, 0);
-}
-
-.song-status.Private {
-  color: white;
-  font-size: 0.8rem;
-  padding: 0.2rem;
-  background-color: rgb(86, 92, 119);
+    .song-status.Private {
+      color: white;
+      font-size: 0.8rem;
+      padding: 0.2rem;
+      background-color: rgb(86, 92, 119);
+    }
+  }
 }
 
 /*SKELETON DIVS*/
