--- a/client/src/pages/Backgrounds/backgrounds.css
+++ b/client/src/pages/Backgrounds/backgrounds.css
@@ -1,13 +1,13 @@
 .backgrounds-container{
   margin: 0 auto;
   padding: 1rem;
-  min-height: 100%;
+  height: 100%;
   height: auto !important;
   max-width: 1600px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   gap: 1rem;
+  margin-top: 100px;
 }
 
 .backgrounds-container .add-bg{
