--- a/client/src/pages/HomePage/sections/documentary.css
+++ b/client/src/pages/HomePage/sections/documentary.css
@@ -29,8 +29,9 @@
 .documentary-container {
   position: relative;
   color: white;
+  text-align: center;
 
-  .documentary-wrapper{
+  .documentary-wrapper {
     margin: 0 auto;
     justify-content: space-between;
     max-width: 1500px;
@@ -43,68 +44,57 @@
   }
 }
 
-.documentary-wrapper .info-wrapper {
-  text-align: center;
+.doc-thumbnail-container {
   margin: 0 auto;
-  width: 100%;
-  max-width: 640px;
-  >label{
-    letter-spacing: .3rem;
-    font-size: .8rem;
-  }
-  > p {
-    margin-bottom: 1.5rem;
-  }
-  >h1 {
-    font-size: 2.5rem;
-  }
-  >h3 {
-    font-weight: 500;
-    font-size: 1.3rem;
-    padding-bottom: 1.5rem;
-  }
-}
-
-.documentary-wrapper .info-wrapper .watch-btn {
-  cursor: pointer;
-  font-size: 0.9rem;
-  padding: 0.6rem;
-  border: 1px solid rgb(255, 255, 255);
-  background-color: rgb(253, 41, 41);
+  position: relative;
+  border: 2px solid transparent;
   transition: 0.2s ease-in-out;
-  text-decoration: none;
-  color: white;
-}
+  &:hover {
+    border: 2px solid rgb(202, 47, 223);
+    transition: 0.2s ease-in-out;
+  }
 
-.documentary-wrapper .info-wrapper .watch-btn:hover {
-  transition: 0.2s ease-in-out;
-  background-color: rgb(196, 0, 0);
-}
+  &:hover &::before{
+    background-color: transparent;
+  }
 
-.doc-player {
-  width: 960px;
-  height: 540px;
-}
-
-.doc-video-container {
-  margin: 0 auto;
+  &:before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.637);
+    z-index: 1;
+    pointer-events: none;
+  }
+  > img {
+    position: relative;
+    max-width: 850px;
+    width: 100%;
+    cursor: pointer;
+    opacity: .9;
+  }
+  >svg{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    width: 5rem;
+    height: 5rem;
+    border: 2px solid white;
+    padding: 1rem;
+    border-radius: 100%;
+    z-index: 2;
+    pointer-events: none;
+  }
 }
 
 @media screen and (max-width: 1020px) {
-  .doc-player {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    right: 0;
-  }
-
-  .doc-player-wrapper {
-    position: relative;
-    padding-top: 56.25%;
-  }
-
-  .doc-video-container {
+  .doc-thumbnail-container {
     width: 100%;
   }
 }
