--- a/client/src/pages/Song/deleted-song.css
+++ b/client/src/pages/Song/deleted-song.css
@@ -66,15 +66,18 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
+  max-width: 600px !important;
+  width: 100%;
 }
 
-.original-info h1{
+.original-info h1 {
   margin-top: 2rem;
 }
 
 .original-info .info {
+  max-width: 600px !important;
   width: 100%;
-  font-size: .9rem;
+  font-size: 0.9rem;
   font-weight: 700;
   display: flex;
   flex-direction: column;
@@ -105,18 +108,35 @@
 .original-info span:hover {
   background-color: rgb(7, 7, 7);
 }
+.description {
+  width: 100% !important;
+  .description-text {
+    white-space: pre-wrap;
+    overflow-x: hidden;
+    overflow-y: auto;
+    width: 100%;
+    height: 220px;
+    font-size: 0.9rem;
+    font-weight: 500;
+    padding: 0.5rem;
+    color: rgb(236, 236, 236);
+    background-color: rgba(32, 32, 32, 0.74);
+    transition: 0.2s ease-in-out;
 
-.description-text {
-  white-space: pre-wrap;
-  overflow-x: hidden;
-  overflow-y: auto;
-  max-width: 600px;
-  height: 220px;
-  font-size: 0.9rem;
-  font-weight: 500;
-  padding: 0.5rem;
-  color: rgb(236, 236, 236);
-  background-color: rgba(32, 32, 32, 0.74);
+    &:hover {
+      background-color: rgba(12, 12, 12, 0.664);
+      transition: 0.2s ease-in-out;
+    }
+  }
+  .description-text.no-data {
+    user-select: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+    font-size: 1.2rem;
+    
+  }
 }
 
 @media screen and (max-width: 627px) {
