--- a/client/src/pages/Songs/EditSong/edit-song.css
+++ b/client/src/pages/Songs/EditSong/edit-song.css
@@ -34,6 +34,11 @@
   height: 100%;
   min-height: 100vh;
   padding: 3.5rem;
+
+  .title{
+    font-size: 2.5rem;
+    margin-bottom: 3rem;
+  }
 }
 
 
