--- a/client/src/pages/HomePage/sections/docModal.css
+++ b/client/src/pages/HomePage/sections/docModal.css
@@ -20,7 +20,29 @@
   width: 960px;
   height: 540px;
   border: 3px solid rgba(255, 255, 255, 0.418);
-  box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.541);
+}
+
+.doc-player-wrapper {
+  position: relative;
+  > svg {
+    cursor: pointer;
+    position: absolute;
+    border-radius: 100%;
+    padding: 0.5rem;
+    top: -2.8rem;
+    right: 0;
+    width: 2rem;
+    height: 2rem;
+    color: white !important;
+    background-color: rgba(21, 21, 31, 0.521);
+    z-index: 10;
+    transition: 0.2s ease-in-out;
+
+    &:hover {
+      background-color: rgba(73, 73, 88, 0.521);
+      transition: 0.2s ease-in-out;
+    }
+  }
 }
 
 @media screen and (max-width: 1020px) {
@@ -40,8 +62,7 @@
 }
 
 .doc-container {
-    padding: 1rem;
-
+  padding: 1rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -54,5 +75,5 @@
   bottom: 0;
   right: 0;
   margin: auto;
-  z-index: 3;
+  z-index: 10;
 }
