--- a/client/src/pages/HomePage/sections/documentary.css
+++ b/client/src/pages/HomePage/sections/documentary.css
@@ -44,39 +44,31 @@
   }
 }
 
-.doc-thumbnail-container {
+.doc-thumbnail {
   margin: 0 auto;
   position: relative;
   border: 2px solid transparent;
   transition: 0.2s ease-in-out;
+
   &:hover {
     border: 2px solid rgb(202, 47, 223);
     transition: 0.2s ease-in-out;
   }
 
-  &:hover &::before{
-    background-color: transparent;
-  }
-
-  &:before{
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.637);
-    z-index: 1;
-    pointer-events: none;
-  }
   > img {
     position: relative;
     max-width: 850px;
     width: 100%;
     cursor: pointer;
-    opacity: .9;
+    opacity: 0.9;
+    filter: brightness(50%);
+    transition: 0.3s ease-in-out;
+    &:hover {
+      filter: brightness(80%);
+      transition: 0.3s ease-in-out;
+    }
   }
-  >svg{
+  > svg {
     position: absolute;
     top: 0;
     left: 0;
