--- a/client/src/pages/Backgrounds/components/bg.css
+++ b/client/src/pages/Backgrounds/components/bg.css
@@ -28,15 +28,26 @@
 .bg-container.true::before {
   background-color: rgb(133, 133, 133);
 }
+.bg-container.dark .bg-image-wrapper .bg-loader{
+  background-color: rgb(36, 36, 36);
+
+}
 
 .bg-image-wrapper {
-  cursor: pointer;
   overflow: hidden;
   margin: 0 auto;
   aspect-ratio: 16/9;
   width: 100%;
+  .bg-loader {
+    cursor: default;
+    background-color: rgb(148, 148, 148);
+    width: 100%;
+    height: 100%;
+    animation: opacity 2s alternate infinite;
+  }
 }
 .bg-image-wrapper img {
+  cursor: pointer;
   aspect-ratio: 16/9;
   margin: auto;
   object-fit: cover;
