--- a/client/src/pages/HomePage/sections/engagement.css
+++ b/client/src/pages/HomePage/sections/engagement.css
@@ -35,6 +35,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 1rem;
     > h2 {
       font-size: 2.5rem;
       text-align: center;
