--- a/client/src/pages/About/about.css
+++ b/client/src/pages/About/about.css
@@ -7,6 +7,10 @@
     margin: 0 auto;
     margin-top: 100px;
     padding: 1rem;
+    > label {
+        letter-spacing: 0.3rem;
+        font-size: 0.8rem;
+      }
     >h2{
         font-size: 3rem;
     }
