--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,7 +28,7 @@
 .routes-container::-webkit-scrollbar-thumb {
   border-radius: 5px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #0e0e0e;
+  background-color: #b8b8b8;
 }
 
 .routes-container.dark::-webkit-scrollbar-track {
