--- a/client/src/pages/About/about.css
+++ b/client/src/pages/About/about.css
@@ -1,17 +1,35 @@
-.about-us{
-    height: auto 100%;
+.about-us {
+  height: auto 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 1600px;
+  margin: 0 auto;
+  margin-top: 100px;
+  padding: 1rem;
+  > label {
+    letter-spacing: 0.3rem;
+    font-size: 0.8rem;
+  }
+  > h2 {
+    margin-bottom: 3rem;
+    font-size: 3rem;
+  }
+  .description-wrapper {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    max-width: 1600px;
-    margin: 0 auto;
-    margin-top: 100px;
-    padding: 1rem;
-    > label {
-        letter-spacing: 0.3rem;
-        font-size: 0.8rem;
-      }
-    >h2{
-        font-size: 3rem;
+    gap: 1rem;
+    > p {
+        font-weight: 400;
+      color: rgb(82, 82, 82);
     }
+    > ul {
+      margin-left: 2rem;
+      line-height: 1.4rem;
+    }
+  }
+}
+
+.about-us.dark .description-wrapper >p{
+    color: white;
 }
