--- a/client/src/pages/Song Single Page/sections/deleted-info.css
+++ b/client/src/pages/Song Single Page/sections/deleted-info.css
@@ -4,11 +4,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+  gap: 4rem;
   color: black;
+  width: 100%;
 }
 
 .deleted-info-container.dark{
-  background: radial-gradient(circle, rgb(21, 21, 29) 0%, rgb(10, 10, 10) 100%);
+ /*  background: radial-gradient(circle, rgb(21, 21, 29) 0%, rgb(10, 10, 10) 100%); */
+ background-color: #09090a;
   color: white;
 
   .deleted-wrapper .deleted-artwork button{
@@ -22,15 +26,19 @@
 }
 
 .deleted-wrapper {
+  max-width: 1000px;
+  width: 100% !important;
   position: relative;
   display: flex;
   align-items: flex-start;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-wrap: wrap;
-  gap: 1rem;
+  gap: 4rem;
 }
 
 .deleted-wrapper .deleted-artwork {
+  margin: 0 auto;
+
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -58,27 +66,19 @@
 
 .deleted-wrapper .deleted-artwork img {
   box-shadow: rgba(0, 0, 0, 0.712) 0px 5px 15px;
-  max-width: 400px;
+  max-width: 350px;
   width: 100%;
-  border-radius: 100%;
 }
 
 .deleted-wrapper .info-wrapper {
-  padding: 1rem;
+  margin: 0 auto;
+  max-width: 700px;
   display: flex;
+  padding: 1rem;
   flex-direction: column;
   gap: 1rem;
 }
 
-.deleted-wrapper .info-wrapper {
-  max-width: 1000px;
-  display: grid;
-  grid-template-columns: repeat(
-    auto-fill,
-    minmax(var(--auto-grid-min-size), 1fr)
-  );
-  gap: 1rem;
-}
 
 .deleted-wrapper .info-wrapper h1 {
   margin-bottom: 1rem;
