--- a/client/src/pages/Song Single Page/sections/deleted-song.css
+++ b/client/src/pages/Song Single Page/sections/deleted-song.css
@@ -25,13 +25,30 @@
   flex-direction: column;
 }
 
+.video-container.dark::after{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, #09090a 0%, rgba(255, 255, 255, 0) 100%) !important;
+}
+
 .video-container .video-wrapper {
-  padding: 1rem 1rem 4rem 0rem;
+  z-index: 2;
+  padding: 7rem 1rem 8rem 0rem;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+}
+
+@media screen and (max-width: 1295px) {
+  .video-container .video-wrapper {
+    padding: 1rem 1rem 4rem 0rem;
+  }
 }
 
 .video-container::before {
