--- a/client/src/pages/About/about.css
+++ b/client/src/pages/About/about.css
@@ -7,26 +7,34 @@
   margin: 0 auto;
   margin-top: 100px;
   padding: 1rem;
-  > label {
-    letter-spacing: 0.3rem;
-    font-size: 0.8rem;
-  }
-  > h2 {
-    margin-bottom: 3rem;
-    font-size: 3rem;
-  }
-  .description-wrapper {
     display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    > p {
-        font-weight: 400;
-      color: rgb(82, 82, 82);
+    align-items: center;
+    > label {
+      letter-spacing: 0.3rem;
+      font-size: 0.8rem;
     }
-    > ul {
-      margin-left: 2rem;
-      line-height: 1.4rem;
+    > h2 {
+      margin-bottom: 3rem;
+      font-size: 3rem;
     }
+    .description-wrapper {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      > p {
+          font-weight: 400;
+        color: rgb(82, 82, 82);
+      }
+      > ul {
+        margin-left: 2rem;
+        line-height: 1.4rem;
+      }
+    }
+    >img{
+      margin-top: 3rem;
+      max-width: 600px;
+      width: 100%;
+      object-fit: cover;
   }
 }
 
